fixed the alignment and the width of the container

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,8 @@ a:hover {
   padding: 43px;
   border-radius: 20px;
   margin: 0 auto;
-  width: auto; }
+  width: auto;
+  max-width: 1264px; }
   @media only screen and (max-width: 800px) {
     .radiant-container {
       width: auto; } }
@@ -545,13 +546,14 @@ a:hover {
 
 .radiant-small-container {
   padding: 30px;
+  max-width: 1264px;
   justify-content: center;
   display: flex;
   flex-direction: column;
   background: linear-gradient(96.95deg, #ff2473 0.26%, #de063a 72.22%);
   color: white;
   border-radius: 20px;
-  margin-top: 30px; }
+  margin: 30px auto 0px auto; }
 
 .dark-text-cont {
   width: fit-content;
@@ -573,8 +575,9 @@ a:hover {
   margin-left: 15px; }
 
 .questions-container {
-  margin-top: 70px;
-  text-align: initial; }
+  max-width: 1264px;
+  text-align: initial;
+  margin: 70px auto 0px auto; }
 
 .question-header {
   font-size: 32px;
