--- a/sass/layout/_sectionsass.scss
+++ b/sass/layout/_sectionsass.scss
@@ -78,6 +78,7 @@
   border-radius: 20px;
   margin: 0 auto;
   width: auto;
+  max-width: 1264px;
 
   @media only screen and (max-width: 800px) {
     width: auto;
